Fix employee page window squishing

--- a/public/stylesheets/dashboard/employees_page.scss
+++ b/public/stylesheets/dashboard/employees_page.scss
@@ -3,7 +3,7 @@
   padding: 20px;
   box-sizing: border-box;
   display: grid;
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-rows: 220px, ;
   grid-gap: 1em;
 
   h1 {
@@ -14,7 +14,8 @@
 }
 
 .employee-info-container {
-  grid-row: 1 / 3;
+  grid-row: 1 / 2;
+  max-height: 100%;
   background: #fff;
   display: flex;
   flex-direction: row;
@@ -22,16 +23,18 @@
   justify-content: center;
   border: 1px solid darken($light-color, 5%);
   border-radius: 3px;
+  padding: 15px;
 
   .employee-profile-pic {
-    width: 180px;
     height: 180px;
     border: 1px solid $light-color;
-    border-radius: 90px;
+    border-radius: 50%;
   }
 
   section {
+    max-height: 100%;
     margin-left: 30px;
+    overflow: hidden;
       
     * {
       line-height: 1.5em;
@@ -49,12 +52,17 @@
   }
 
   .completed-call-count {
+    height: 60%;
     background: $primary-color-dark;
     color: set-text-color($primary-color-dark);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
     padding: 15px;
     border-radius: 5px;
     width: 120px;
-    text-align: center;
+    overflow: hidden;
 
     h1 {
       font-size: 60px;
@@ -66,8 +74,7 @@
 }
 
 .employee-call-index-container {
-  grid-row: 3 / 7;
-  grid-column: 1 / 2;
+  grid-row: 2 / 3;
   border: none;
   display: grid;
   width: 100%;
